# cpptrace-feedstock

./: README.md
.azure-pipelines/: azure-pipelines-linux.yml
.ci_support/: linux_64_.yaml  linux_64_unwind_backenddefault.yaml  linux_64_unwind_backendlibunwind.yaml  linux_aarch64_unwind_backenddefault.yaml  linux_aarch64_unwind_backendlibunwind.yaml  linux_ppc64le_unwind_backenddefault.yaml  linux_ppc64le_unwind_backendlibunwind.yaml  osx_64_.yaml  osx_arm64_.yaml  win_64_.yaml
.github/: CODEOWNERS
recipe/: bld.bat  build.bat  build.sh  conda_build_config.yaml  meta.yaml
recipe/patches/: 0001-libdwarf-patches.patch
recipe/test/: CMakeLists.txt  main.cpp
